resolve overflow bar nav 2

--- a/src/components/navegacionBarAll/barradeNavegacion.css
+++ b/src/components/navegacionBarAll/barradeNavegacion.css
@@ -69,7 +69,7 @@
     margin-left: 50px;
     justify-content: flex-end;
 
-    width: 40%;
+    width: 50%;
 }
 
 
